<resources>
    <string name="app_name">Aula3009</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cruzeiro do Sul</string>
    <string name="nav_header_subtitle">Lucas Lopes do Nascimento</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>
    <string name="menu_home">Home</string>
    <string name="menu_qms">Quem Somos</string>
    <string name="menu_contato">Contato</string>
    <string name="hint_nome">Nome *</string>
    <string name="hint_email">E-mail *</string>
    <string name="hint_assunto">Assunto *</string>
    <string name="hint_mensagem">Mensagem *</string>
    <string name="btn_enviar">Enviar Mensagem</string>
    <string name="qms_subtitle">Preencha o formulário abaixo</string>
    <string name="qms_title">Entre em Contato</string>
    <string name="quem_somos_title">Quem Somos</string>
    <string name="quem_somos_subtitle">Conheça nossa equipe</string>
    <string name="foto_integrante">Foto do integrante</string>
    <string name="qms_nome">Nome do Integrante</string>
    <string name="qms_cargo">Cargo</string>
    <string name="qms_descri">Descrição do integrante</string>
   <string name="title_curso">ADS</string>
    <string name="curso_title">Análise e Desenvolvimento de Sistemas</string>
    <string name="curso_subtitle">Tecnólogo</string>
    <string name="curso_sobre">Sobre o Curso</string>
    <string name="curso_descricao">O curso de Análise e Desenvolvimento de Sistemas forma profissionais capacitados para projetar, documentar, desenvolver, testar, implantar e manter sistemas computacionais de informação.</string>
    <string name="curso_duracao_label">Duração</string>
    <string name="curso_duracao_valor">2 anos (4 semestres)</string>
    <string name="curso_modalidade_label">Modalidade</string>
    <string name="curso_modalidade_valor">Presencial</string>
    <string name="curso_mercado_label">Mercado</string>
    <string name="curso_mercado_valor">Alta empregabilidade</string>
    <string name="disciplinas_title">Disciplinas em Destaque</string>
    <string name="disciplina1_titulo">Programação Mobile</string>
    <string name="disciplina1_descricao">Desenvolvimento de aplicações para dispositivos móveis Android utilizando Java e Kotlin. Aprenda a criar interfaces modernas, integrar APIs REST, trabalhar com bancos de dados locais e publicar apps na Play Store.</string>
    <string name="disciplina1_carga">Carga Horária: 80h</string>
    <string name="disciplina1_semestre">4º Semestre</string>
    <string name="disciplina1_img_desc">Imagem Programação Mobile</string>
    <string name="disciplina2_titulo">Banco de Dados</string>
    <string name="disciplina2_descricao">Modelagem, projeto e implementação de bancos de dados relacionais e não-relacionais. Domine SQL, MySQL, PostgreSQL, MongoDB e técnicas avançadas de otimização de consultas e performance.</string>
    <string name="disciplina2_carga">Carga Horária: 80h</string>
    <string name="disciplina2_semestre">3º Semestre</string>
    <string name="disciplina2_img_desc">Imagem Banco de Dados</string>
    <string name="emoji_sobre">📚 Sobre o Curso</string>
    <string name="emoji_duracao">⏱️ Duração</string>
    <string name="emoji_modalidade">🎓 Modalidade</string>
    <string name="emoji_mercado">💼 Mercado</string>
    <string name="emoji_mobile">📱 Programação Mobile</string>
    <string name="emoji_database">🗄️ Banco de Dados</string>
    <string name="emoji_carga">⏰ Carga Horária: 80h</string>
    <string name="home_bem_vindo">Bem-vindo! 👋</string>
    <string name="home_subtitulo">Explore nosso aplicativo e conheça o curso de Análise e Desenvolvimento de Sistemas</string>
    <string name="home_sobre_titulo">📱 Sobre o Projeto</string>
    <string name="home_sobre_descricao">Este aplicativo foi desenvolvido como projeto acadêmico para apresentar o curso de Análise e Desenvolvimento de Sistemas, suas principais disciplinas e nossa equipe. Navegue pelo menu para conhecer mais sobre cada seção.</string>
    <string name="home_funcionalidades_titulo">O que você encontrará aqui</string>
    <string name="home_card_curso">Nosso Curso</string>
    <string name="home_card_curso_desc">Informações completas</string>
    <string name="home_card_disciplinas">Disciplinas</string>
    <string name="home_card_disciplinas_desc">Conteúdos principais</string>
    <string name="home_card_equipe">Nossa Equipe</string>
    <string name="home_card_equipe_desc">Conheça os integrantes</string>
    <string name="home_card_contato">Fale Conosco</string>
    <string name="home_card_contato_desc">Entre em contato</string>
    <string name="home_cta_titulo">🎓 Pronto para começar?</string>
    <string name="home_cta_descricao">Use o menu lateral para navegar entre as seções e descobrir tudo sobre o curso!</string>


</resources>