<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_curso"
            android:icon="@drawable/ic_code"
            android:title="@string/title_curso"
            />

        <item
            android:id="@+id/nav_contato"
            android:icon="@drawable/ic_menu_contato"
            android:title="@string/menu_contato" />

        <item
            android:id="@+id/nav_qms"
            android:icon="@drawable/ic_menu_qms"
            android:title="@string/menu_qms" />

    </group>
</menu>