<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.aula3009.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_curso"
        android:name="com.example.aula3009.ui.curso.CursoFragment"
        android:label="@string/title_curso"
        tools:layout="@layout/fragment_curso" />



    <fragment
        android:id="@+id/nav_contato"
        android:name="com.example.aula3009.ui.contato.ContatoFragment"
        android:label="@string/menu_contato"
        tools:layout="@layout/fragment_contato" />

    <fragment
        android:id="@+id/nav_qms"
        android:name="com.example.aula3009.ui.qms.QmsFragment"
        android:label="@string/menu_qms"
        tools:layout="@layout/fragment_qms" />


</navigation>